Add metric for GPU health check failure
This change add the GPU health check failure metric to the
"Unhealthy Instance Errors" dashboard widget.

Signed-off-by: David Pratt <davprat@amazon.com>

--- a/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/alinux2.slurm.conditional_vol.yaml
+++ b/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_cw_dashboard_builder/alinux2.slurm.conditional_vol.yaml
@@ -32,6 +32,9 @@ Scheduling:
           MaxCount: 5
         - Name: compute_resource2
           InstanceType: c4.2xlarge
+      HealthChecks:
+        Gpu:
+          Enabled: true
       CustomActions:
         OnNodeConfigured:
           Script: s3://{{ resource_bucket }}/scripts/postinstall.sh
