--- a/tests/integration-tests/configs/develop.yaml
+++ b/tests/integration-tests/configs/develop.yaml
@@ -82,7 +82,7 @@ test-suites:
           schedulers: ["slurm"]
     test_scaling.py::test_multiple_jobs_submission:
       dimensions:
-        - regions: ["af-south-1"]
+        - regions: ["us-west-2"]
           instances: {{ common.INSTANCES_DEFAULT_ARM }}
           oss: ["ubuntu2004"]
           schedulers: ["slurm"]
