--- a/tests/integration-tests/configs/develop.yaml
+++ b/tests/integration-tests/configs/develop.yaml
@@ -100,3 +100,32 @@ test-suites:
         - regions: ["usw2-az4"]  # do not move, unless instance type support is moved as well
           schedulers: ["slurm"]
           oss: ["ubuntu2004"]
+  custom_resource:
+    test_cluster_custom_resource.py::test_cluster_create:
+      dimensions:
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
+    test_cluster_custom_resource.py::test_cluster_create_invalid:
+      dimensions:
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
+    test_cluster_custom_resource.py::test_cluster_update:
+      dimensions:
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
+    test_cluster_custom_resource.py::test_cluster_update_invalid:
+      dimensions:
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
+    test_cluster_custom_resource.py::test_cluster_delete_out_of_band:
+      dimensions:
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
+    test_cluster_custom_resource.py::test_cluster_delete_retain:
+      dimensions:
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
+    test_cluster_custom_resource.py::test_cluster_create_with_custom_policies:
+      dimensions:
+        - oss: ["alinux2"]
+          regions: ["us-east-2"]
