--- a/cloudformation/custom_resource/cluster.yaml
+++ b/cloudformation/custom_resource/cluster.yaml
@@ -23,7 +23,7 @@ Parameters:
 Mappings:
   ParallelCluster:
     Constants:
-      Version: 3.6.0b1  # major.minor.patch+alpha/beta_identifier
+      Version: 3.6.0  # major.minor.patch+alpha/beta_identifier
 
 Conditions:
   CustomRoleCondition: !Not [!Equals [!Ref CustomLambdaRole, '']]
