--- a/tests/integration-tests/configs/released.yaml
+++ b/tests/integration-tests/configs/released.yaml
@@ -30,8 +30,7 @@ test-suites:
     test_api.py::test_official_images:
       dimensions:
         - regions: ["sa-east-1"]
-  # Add in once released is >= 3.6.0
-  # custom_resource:
-  #   test_cluster_custom_resource.py::test_cluster_1_click:
-  #     dimensions:
-  #       - regions: ["us-east-2"]
+  custom_resource:
+    test_cluster_custom_resource.py::test_cluster_1_click:
+      dimensions:
+        - regions: ["us-east-2"]
